src/snapshots/antsi__lexer__tests__background_style_specifier.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: BackgroundSpecifier,
        text: "bg",
        span: 0..2,
    },
    Token {
        kind: Colon,
        text: ":",
        span: 2..3,
    },
    Token {
        kind: Color(
            Magenta,
        ),
        text: "magenta",
        span: 3..10,
    },
]
