src/snapshots/antsi__lexer__tests__foreground_style_specifier.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: ForegroundSpecifier,
        text: "fg",
        span: 0..2,
    },
    Token {
        kind: Colon,
        text: ":",
        span: 2..3,
    },
    Token {
        kind: Color(
            Blue,
        ),
        text: "blue",
        span: 3..7,
    },
]
