src/snapshots/antsi__lexer__tests__many_tokens.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Lexeme {
        kind: Text,
        text: "leading",
        span: 0..7,
    },
    Lexeme {
        kind: Whitespace,
        text: " ",
        span: 7..8,
    },
    Lexeme {
        kind: SquareBracketOpen,
        text: "[",
        span: 8..9,
    },
    Lexeme {
        kind: ForegroundSpecifier,
        text: "fg",
        span: 9..11,
    },
    Lexeme {
        kind: Colon,
        text: ":",
        span: 11..12,
    },
    Lexeme {
        kind: Color,
        text: "red",
        span: 12..15,
    },
    Lexeme {
        kind: SquareBracketClose,
        text: "]",
        span: 15..16,
    },
    Lexeme {
        kind: ParenthesisOpen,
        text: "(",
        span: 16..17,
    },
    Lexeme {
        kind: Text,
        text: "styled",
        span: 17..23,
    },
    Lexeme {
        kind: Whitespace,
        text: " ",
        span: 23..24,
    },
    Lexeme {
        kind: Text,
        text: "one",
        span: 24..27,
    },
    Lexeme {
        kind: ParenthesisClose,
        text: ")",
        span: 27..28,
    },
    Lexeme {
        kind: Whitespace,
        text: " ",
        span: 28..29,
    },
    Lexeme {
        kind: EscapeCharacter,
        text: "\\[",
        span: 29..31,
    },
    Lexeme {
        kind: Text,
        text: "middle",
        span: 31..37,
    },
    Lexeme {
        kind: EscapeCharacter,
        text: "\\)",
        span: 37..39,
    },
    Lexeme {
        kind: Whitespace,
        text: " ",
        span: 39..40,
    },
    Lexeme {
        kind: SquareBracketOpen,
        text: "[",
        span: 40..41,
    },
    Lexeme {
        kind: BackgroundSpecifier,
        text: "bg",
        span: 41..43,
    },
    Lexeme {
        kind: Colon,
        text: ":",
        span: 43..44,
    },
    Lexeme {
        kind: Color,
        text: "blue",
        span: 44..48,
    },
    Lexeme {
        kind: Semicolon,
        text: ";",
        span: 48..49,
    },
    Lexeme {
        kind: DecorationSpecifier,
        text: "deco",
        span: 49..53,
    },
    Lexeme {
        kind: Colon,
        text: ":",
        span: 53..54,
    },
    Lexeme {
        kind: Decoration,
        text: "bold",
        span: 54..58,
    },
    Lexeme {
        kind: Comma,
        text: ",",
        span: 58..59,
    },
    Lexeme {
        kind: Decoration,
        text: "italic",
        span: 59..65,
    },
    Lexeme {
        kind: SquareBracketClose,
        text: "]",
        span: 65..66,
    },
    Lexeme {
        kind: ParenthesisOpen,
        text: "(",
        span: 66..67,
    },
    Lexeme {
        kind: Text,
        text: "styled",
        span: 67..73,
    },
    Lexeme {
        kind: Whitespace,
        text: " ",
        span: 73..74,
    },
    Lexeme {
        kind: Text,
        text: "two",
        span: 74..77,
    },
    Lexeme {
        kind: ParenthesisClose,
        text: ")",
        span: 77..78,
    },
    Lexeme {
        kind: Whitespace,
        text: " ",
        span: 78..79,
    },
    Lexeme {
        kind: EscapeWhitespace,
        text: "\\\n ",
        span: 79..82,
    },
    Lexeme {
        kind: Text,
        text: "trailing",
        span: 82..90,
    },
]
