src/snapshots/antsi__lexer__tests__multiple_decoration_style_specifiers.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: DecorationSpecifier,
        text: "deco",
        span: 0..4,
    },
    Token {
        kind: Colon,
        text: ":",
        span: 4..5,
    },
    Token {
        kind: Decoration(
            Bold,
        ),
        text: "bold",
        span: 5..9,
    },
    Token {
        kind: Comma,
        text: ",",
        span: 9..10,
    },
    Token {
        kind: Decoration(
            Italic,
        ),
        text: "italic",
        span: 10..16,
    },
]
