src/snapshots/antsi__lexer__tests__single_decoration_style_specifier.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Lexeme {
        kind: DecorationSpecifier,
        text: "deco",
        span: 0..4,
    },
    Lexeme {
        kind: Colon,
        text: ":",
        span: 4..5,
    },
    Lexeme {
        kind: Decoration(
            Bold,
        ),
        text: "bold",
        span: 5..9,
    },
]
